# azure-pull-all-resource-details

./: .gitignore  README.md  convert_csv.py  data_class.py  logging-conf.yaml  pyproject.toml  resourcegraph.py
.github/: dependabot.yaml
